# recsys_service

./: .gitignore  Makefile  README.md  config.yml  docker-compose-prometheus.yml  docker-compose.yml  hw2  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: code-style.yml  tests.yml
filebeat/: Dockerfile  filebeat.yml
grafana/: datasource.yaml
notebooks/: dssm.ipynb  fm_models.ipynb  hybrid_rankers.ipynb  lightfm_profiling.ipynb  metrics_and_validation.ipynb  popular_models.ipynb  popular_models_mlflow.ipynb  recbole_models.ipynb  sasrec_bert4rec_comparison.ipynb  user_knn_models.ipynb
prometheus/: config.yml
service/: log.py  models.py  utils.py
service/api/: app.py  auth.py  exceptions.py  middlewares.py  views.py
src/: train.py
src/recommenders/: __init__.py  base.py  hybrid.py  lightfm.py  most_popular.py  user_knn.py
tests/: conftest.py  locustfile.py  pytest.ini
tests/api/: test_views.py
